@@ -332,7 +332,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.2.5</version>
           <configuration>
-            <argLine>@{argLine} --add-modules jdk.incubator.vector</argLine>
+            <argLine>@{argLine} --add-modules jdk.incubator.vector -Dnet.bytebuddy.experimental=true --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
         <plugin>
